feat(): added service of create company and integrated with service of create user
